<resources>
    <string name="app_name">Intent_Bundle</string>
    <string name="buttonExplicitIntent">buttonExplicitIntent</string>
    <string name="textViewExplicit" />
    <string name="textViewName">이름</string>
    <string name="editTextName" />
    <string name="textViewAge">나이</string>
    <string name="editTextAge" />
    <string name="buttonSend">제출하기</string>
    <string name="textViewSend" />
</resources>
