<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonExplicitIntent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonExplicitIntent" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewName" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="이름을 입력하세요."
                android:inputType="textPersonName"
                android:text="@string/editTextName" />

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewAge" />

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="나이를 입력하세요."
                android:inputType="textPersonName"
                android:text="@string/editTextAge" />

            <Button
                android:id="@+id/buttonSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonSend" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>